GNOME Bugzilla – Bug 657519
window can be maximized to wrong display
Last modified: 2011-10-18 01:38:41 UTC
When I drag the title bar to the top, the display where the mouse pointer is is highlighted. When I release the mouse, the window maximizes to the display containing the largest portion of the window. These are not always the same. Suppose I have two displays, and I am dragging a window from its top left corner. I move the mouse pointer to the top right (not completely right, that would trigger half-maximize not maximize) corner of my left display. My left display is highlighted, as I would expect, since the mouse pointer is in the left display. But when I release the mouse, the window maximizes to the right display, presumably because there is a larger portion of the window in the right display than in the left display.
I'm almost sure this another symptom of bug 642580. The patch on that bug should fix this one too. Can you give it a try and test?
Sorry, I can't try the patch. But having had a look at the other bug (and patch), it seems to me to be unrelated. Unlike the other bug, this bug is easy to reproduce, so I guess anyone with the patch should not find it that hard to try it.
Created attachment 194940 [details] [review] tiling: for tiled maximization use tile_rect as target size/position When using more than one monitor, tiled maximization can be triggered with the pointer in one monitor while most of the window area remains in another. This means that the maximization constraint would maximize the window into the wrong monitor as it uses the work area size/position as target. Fix this by using the computed tile_rect on update_move() as target size/position. -- While the patch in bug 642580 doesn't fix this bug per se, it makes the fix straight forward.
Created attachment 199289 [details] [review] tiling: for tiled maximization use the tile area as target size/position When using more than one monitor, tiled maximization can be triggered with the pointer in one monitor while most of the window area remains in another. This means that the maximization constraint would maximize the window into the wrong monitor as it uses the work area size/position as target. Fix this by using the current tile area as target size/position.
Review of attachment 199289 [details] [review]: Makes sense.
Attachment 199289 [details] pushed as c39129b - tiling: for tiled maximization use the tile area as target size/position